@@ -443,11 +443,27 @@ argument_list|,
 literal|false
 argument_list|)
 decl_stmt|;
+name|boolean
+name|prepareCommit
+init|=
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|UpdateParams
+operator|.
+name|PREPARE_COMMIT
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|optimize
 operator|||
 name|commit
+operator|||
+name|prepareCommit
 operator|||
 name|force
 condition|)
@@ -530,6 +546,12 @@ name|cmd
 operator|.
 name|maxOptimizeSegments
 argument_list|)
+expr_stmt|;
+name|cmd
+operator|.
+name|prepareCommit
+operator|=
+name|prepareCommit
 expr_stmt|;
 name|processor
 operator|.
