@@ -1544,6 +1544,73 @@ return|return
 name|rc
 return|;
 block|}
+DECL|method|prepareCommit
+specifier|public
+name|void
+name|prepareCommit
+parameter_list|(
+name|CommitUpdateCommand
+name|cmd
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|boolean
+name|error
+init|=
+literal|true
+decl_stmt|;
+try|try
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"start "
+operator|+
+name|cmd
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+name|writer
+init|=
+name|solrCoreState
+operator|.
+name|getIndexWriter
+argument_list|(
+name|core
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|prepareCommit
+argument_list|()
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"end_prepareCommit"
+argument_list|)
+expr_stmt|;
+name|error
+operator|=
+literal|false
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|error
+condition|)
+name|numErrors
+operator|.
+name|incrementAndGet
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Override
 DECL|method|commit
@@ -1557,6 +1624,20 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|cmd
+operator|.
+name|prepareCommit
+condition|)
+block|{
+name|prepareCommit
+argument_list|(
+name|cmd
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
 name|IndexWriter
 name|writer
 init|=
@@ -1896,16 +1977,14 @@ argument_list|(
 literal|0
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|error
+condition|)
 name|numErrors
 operator|.
-name|set
-argument_list|(
-name|error
-condition|?
-literal|1
-else|:
-literal|0
-argument_list|)
+name|incrementAndGet
+argument_list|()
 expr_stmt|;
 block|}
 comment|// if we are supposed to wait for the searcher to be registered, then we should do it
@@ -2193,16 +2272,14 @@ literal|0
 argument_list|)
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|error
+condition|)
 name|numErrors
 operator|.
-name|set
-argument_list|(
-name|error
-condition|?
-literal|1
-else|:
-literal|0
-argument_list|)
+name|incrementAndGet
+argument_list|()
 expr_stmt|;
 block|}
 block|}
