@@ -51,6 +51,19 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -1422,6 +1435,188 @@ name|isAtomic
 argument_list|)
 expr_stmt|;
 comment|//still more than 1 segment
+name|sr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPrepareCommit
+specifier|public
+name|void
+name|testPrepareCommit
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrQueryRequest
+name|sr
+init|=
+name|req
+argument_list|()
+decl_stmt|;
+name|IndexReader
+name|r
+init|=
+name|sr
+operator|.
+name|getSearcher
+argument_list|()
+operator|.
+name|getTopReaderContext
+argument_list|()
+operator|.
+name|reader
+decl_stmt|;
+name|Directory
+name|d
+init|=
+name|r
+operator|.
+name|directory
+argument_list|()
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|int
+name|nFiles
+init|=
+name|d
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+decl_stmt|;
+name|updateJ
+argument_list|(
+literal|""
+argument_list|,
+name|params
+argument_list|(
+literal|"prepareCommit"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|d
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+operator|>
+name|nFiles
+argument_list|)
+expr_stmt|;
+comment|// make sure new index files were actually written
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==0"
+argument_list|)
+expr_stmt|;
+name|updateJ
+argument_list|(
+literal|""
+argument_list|,
+name|params
+argument_list|(
+literal|"rollback"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==0"
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|updateJ
+argument_list|(
+literal|""
+argument_list|,
+name|params
+argument_list|(
+literal|"prepareCommit"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==0"
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==1"
+argument_list|)
+expr_stmt|;
 name|sr
 operator|.
 name|close
